# ViewImage2

./: .gitignore  CMakeLists.txt  README.md  desktop.ini
legacy/: legacy.cpp
res/: RCa24020  View Image.aps  View Image.rc  resource.h  viewimage-2.5-x64-cm.final.manifest  viewimage.manifest
src/: audio.cpp  audio.h  clipboard.cpp  events.cpp  gaussian_blur_template.h  imgload.cpp  leftrightlogic.cpp  legacy.cpp  ops.cpp  rendering.cpp  renderops.cpp  resizedialog.cpp  starter.cpp
src/effectdialog/: brightnesscontrast.cpp  drawtext.cpp  fontdialog.cpp  gaussian.cpp  resizedialog.cpp
src/effectdialog/headers/: drawtext.h  gaussian.h  resizedialog.hpp
src/headers/: events.hpp  globalvar.hpp  imgload.hpp  leftrightlogic.hpp  ops.hpp  rendering.hpp  renderops.hpp
src/special/: ico_support.cpp  ico_support.hpp  irbo_support.cpp  irbo_support.hpp  m45_support.cpp  m45_support.hpp  sfbb_support.cpp  sfbb_support.hpp  svg_support.cpp  svg_support.hpp
vi legacy code/: legacy.cpp
